Fix Header Bug
Fixed masthead being clickable, even when not visible

--- a/_includes/header-full.scss
+++ b/_includes/header-full.scss
@@ -46,7 +46,9 @@ header {
   .masthead {
     opacity: 0;
     fill: white;
+    pointer-events: none;
     @media (min-width: 730px) {
+      pointer-events: all;
       opacity: 1;
       width: 700px;
     }
